build/testuserdir/var/cache/index/s1/errors/1/vendor/mockery/mockery/tests/Mockery/Fixtures/MethodWithNullableReturnType.php.warn
WARNING:34:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:38:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:43:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:43:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	?
WARNING:44:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:48:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:53:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:53:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	?
WARNING:54:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:58:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:58:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	?
WARNING:59:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:63:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:63:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	?
WARNING:64:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:68:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
